Upgrade Java 11 + Spring Boot 2.6.3 to Java 17 + Spring Boot 3.2.5
- Update build.gradle: Spring Boot 3.2.5, dependency-management 1.1.5,
  DGS codegen 6.2.1, Spotless 6.25.0, Java 17, MyBatis 3.0.3,
  DGS 8.5.0 with platform BOM, jjwt 0.12.5, SQLite 3.45.3.0,
  rest-assured 5.4.0, jackson-datatype-jsr310
- Migrate javax.* to jakarta.* namespace (validation + servlet)
- Rewrite WebSecurityConfig for Spring Security 6 (SecurityFilterChain)
- Fix CustomizeExceptionHandler signature (HttpStatusCode)
- Migrate Joda-Time DateTime to java.time.Instant
- Update jjwt 0.12 API (subject, expiration, signWith, parseSignedClaims)
- Upgrade Netflix DGS 8.x (handleException, SimpleDataFetcherExceptionHandler)
- Java 17 optimizations: records, pattern matching instanceof,
  Stream.toList(), Map.of(), remove Util.java
- Update Gradle wrapper 7.4 to 8.7
- Update GitHub Actions workflow for Java 17
- Fix DGS PageInfo type conversion (graphql.relay -> DGS generated types)
- All 69 tests passing

Co-Authored-By: Stephen Cornwell <stephen@cognition.ai>