@@ -1,48 +1,47 @@
 package io.spring.graphql.exception;
 
-import com.netflix.graphql.dgs.exceptions.DefaultDataFetcherExceptionHandler;
 import com.netflix.graphql.types.errors.ErrorType;
 import com.netflix.graphql.types.errors.TypedGraphQLError;
 import graphql.GraphQLError;
 import graphql.execution.DataFetcherExceptionHandler;
 import graphql.execution.DataFetcherExceptionHandlerParameters;
 import graphql.execution.DataFetcherExceptionHandlerResult;
+import graphql.execution.SimpleDataFetcherExceptionHandler;
 import io.spring.api.exception.FieldErrorResource;
 import io.spring.api.exception.InvalidAuthenticationException;
 import io.spring.graphql.types.Error;
 import io.spring.graphql.types.ErrorItem;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.ConstraintViolationException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import javax.validation.ConstraintViolation;
-import javax.validation.ConstraintViolationException;
+import java.util.concurrent.CompletableFuture;
 import org.springframework.stereotype.Component;
 
 @Component
 public class GraphQLCustomizeExceptionHandler implements DataFetcherExceptionHandler {
 
-  private final DefaultDataFetcherExceptionHandler defaultHandler =
-      new DefaultDataFetcherExceptionHandler();
+  private final SimpleDataFetcherExceptionHandler defaultHandler =
+      new SimpleDataFetcherExceptionHandler();
 
   @Override
-  public DataFetcherExceptionHandlerResult onException(
+  public CompletableFuture<DataFetcherExceptionHandlerResult> handleException(
       DataFetcherExceptionHandlerParameters handlerParameters) {
-    if (handlerParameters.getException() instanceof InvalidAuthenticationException) {
+    if (handlerParameters.getException() instanceof InvalidAuthenticationException e) {
       GraphQLError graphqlError =
           TypedGraphQLError.newBuilder()
               .errorType(ErrorType.UNAUTHENTICATED)
-              .message(handlerParameters.getException().getMessage())
+              .message(e.getMessage())
               .path(handlerParameters.getPath())
               .build();
-      return DataFetcherExceptionHandlerResult.newResult().error(graphqlError).build();
-    } else if (handlerParameters.getException() instanceof ConstraintViolationException) {
+      return CompletableFuture.completedFuture(
+          DataFetcherExceptionHandlerResult.newResult().error(graphqlError).build());
+    } else if (handlerParameters.getException() instanceof ConstraintViolationException cve) {
       List<FieldErrorResource> errors = new ArrayList<>();
-      for (ConstraintViolation<?> violation :
-          ((ConstraintViolationException) handlerParameters.getException())
-              .getConstraintViolations()) {
+      for (ConstraintViolation<?> violation : cve.getConstraintViolations()) {
         FieldErrorResource fieldErrorResource =
             new FieldErrorResource(
                 violation.getRootBeanClass().getName(),
@@ -57,13 +56,14 @@ public class GraphQLCustomizeExceptionHandler implements DataFetcherExceptionHan
       }
       GraphQLError graphqlError =
           TypedGraphQLError.newBadRequestBuilder()
-              .message(handlerParameters.getException().getMessage())
+              .message(cve.getMessage())
               .path(handlerParameters.getPath())
               .extensions(errorsToMap(errors))
               .build();
-      return DataFetcherExceptionHandlerResult.newResult().error(graphqlError).build();
+      return CompletableFuture.completedFuture(
+          DataFetcherExceptionHandlerResult.newResult().error(graphqlError).build());
     } else {
-      return defaultHandler.onException(handlerParameters);
+      return defaultHandler.handleException(handlerParameters);
     }
   }
 
@@ -80,15 +80,15 @@ public class GraphQLCustomizeExceptionHandler implements DataFetcherExceptionHan
     }
     Map<String, List<String>> errorMap = new HashMap<>();
     for (FieldErrorResource fieldErrorResource : errors) {
-      if (!errorMap.containsKey(fieldErrorResource.getField())) {
-        errorMap.put(fieldErrorResource.getField(), new ArrayList<>());
+      if (!errorMap.containsKey(fieldErrorResource.field())) {
+        errorMap.put(fieldErrorResource.field(), new ArrayList<>());
       }
-      errorMap.get(fieldErrorResource.getField()).add(fieldErrorResource.getMessage());
+      errorMap.get(fieldErrorResource.field()).add(fieldErrorResource.message());
     }
     List<ErrorItem> errorItems =
         errorMap.entrySet().stream()
             .map(kv -> ErrorItem.newBuilder().key(kv.getKey()).value(kv.getValue()).build())
-            .collect(Collectors.toList());
+            .toList();
     return Error.newBuilder().message("BAD_REQUEST").errors(errorItems).build();
   }
 
@@ -104,10 +104,10 @@ public class GraphQLCustomizeExceptionHandler implements DataFetcherExceptionHan
   private static Map<String, Object> errorsToMap(List<FieldErrorResource> errors) {
     Map<String, Object> json = new HashMap<>();
     for (FieldErrorResource fieldErrorResource : errors) {
-      if (!json.containsKey(fieldErrorResource.getField())) {
-        json.put(fieldErrorResource.getField(), new ArrayList<>());
+      if (!json.containsKey(fieldErrorResource.field())) {
+        json.put(fieldErrorResource.field(), new ArrayList<>());
       }
-      ((List) json.get(fieldErrorResource.getField())).add(fieldErrorResource.getMessage());
+      ((List) json.get(fieldErrorResource.field())).add(fieldErrorResource.message());
     }
     return json;
   }
